// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/users /:user GET by id 1`] = `
Object {
  "text": "test",
}
`;

exports[`/users /:user PUT 1`] = `
Object {
  "text": "put",
}
`;

exports[`/users POST 1`] = `
Object {
  "text": "anon",
}
`;
